# jarvis0

./: .gitignore  Dockerfile  README.md  config.yaml  crewai_flow.html  docker-compose.yml  main.old.py  main.py  pyproject.toml  pytm_output.py  requirements.txt  sample_report.txt
crews/jarvis_crew/: jarvis_crew.py
crews/jarvis_crew/config/: agents.yaml  tasks.yaml
db/: chroma.sqlite3
