[project]
name = "jarvis"
version = "0.1.0"
description = "jarvis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
    "streamlit",
    "openai",
    "pyyaml",
    "anthropic",
    "graphviz",
    "streamlit-authenticator",
    "pyarrow",
    "pytm",
]

[project.scripts]
kickoff = "jarvis.main:kickoff"
plot = "jarvis.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
