[project]
name = "jarvis"
version = "0.0.1"
description = "Jarvis using crewAI"
authors = [{ name = "Oussama", email = "oussama.louhaidia@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit",
    "pyyaml",
    "streamlit-authenticator",
    "pyarrow",
    "pytm",
    "pydantic",
    "graphviz",
    "open-interpreter",
    "crewai",
    "crewai-tools>=0.32.1",
]

[project.scripts]
kickoff = "main:kickoff"
plot = "main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./."]

[tool.crewai]
type = "flow"
